--- a/eunmin/tiny/home.html
+++ b/eunmin/tiny/home.html
@@ -12,6 +12,23 @@
         <video src="sample_640x360.mp4" width="640" controls></video>
     </p>
 
+    <form action="/cgi-bin/adder" method="get" class="form-example">
+        <div class="form-example">
+            <label for="number-1">number 1: </label>
+            <input type="text" name="number-1" id="number-1" required>
+        </div>
+        <div class="form-example">
+            <label for="number-2">number 2: </label>
+            <input type="number-2" name="number-2" id="number-2" required>
+        </div>
+        <div class="form-example">
+            <input type="submit" value="add!">
+        </div>
+    </form>
+
+
+
+
 </body>
 
 </html>
